k8s/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: alteapay-app
  labels: { app.kubernetes.io/part-of: alteapay, name: alteapay-app }
